[workspace]
[package]
version = "0.1.0"
name = "sp1-milagro-program"
edition = "2021"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }
milagro_bls = { git = "https://github.com/sigp/milagro_bls.git" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }
